--- a/first-app/src/index.html
+++ b/first-app/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <app-greeter></app-greeter>
+  <hr/>
   <app-root></app-root>
 </body>
 </html>
