--- a/first-app/src/index.html
+++ b/first-app/src/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <app-calculator-1></app-calculator-1>
+  <app-calculator-2></app-calculator-2>
   <app-greeter></app-greeter>
   <hr/>
   <app-root></app-root>
