Bug tracker - adding, listing and toggling bugs

--- a/artefacts/bugTracker-template.html
+++ b/artefacts/bugTracker-template.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bug Tracker</title>
     <script type="text/usecases">
-        1. Add new bugs
+        (done) 1. Add new bugs
         2. List the added bugs
         3. Toggle the 'closed' status of any bug
         4. Remove any bug
@@ -56,8 +56,10 @@
     </style>
 </head>
 <body>
+    <!-- app component -->
     <h1>Bug Tracker</h1>
     <hr>
+    <!-- bugs component -->
     <section class="stats">
         <span class="closed">1</span>
         <span> / </span>
