--- a/artefacts/bugTracker-template.html
+++ b/artefacts/bugTracker-template.html
@@ -7,11 +7,11 @@
     <title>Bug Tracker</title>
     <script type="text/usecases">
         (done) 1. Add new bugs
-        2. List the added bugs
-        3. Toggle the 'closed' status of any bug
-        4. Remove any bug
-        5. Remove closed bugs
-        6. Display stats (# of closed bugs / # of bugs)
+        (done) 2. List the added bugs
+        (done) 3. Toggle the 'closed' status of any bug
+        (done) 4. Remove any bug
+        (done) 5. Remove closed bugs
+        (done) 6. Display stats (# of closed bugs / # of bugs)
         7. Improvise the bug display
         8. Sort the bugs
         9. Persist the bugs in the localStorage
