sort in descending order

--- a/artefacts/bugTracker-template.html
+++ b/artefacts/bugTracker-template.html
@@ -12,8 +12,8 @@
         (done) 4. Remove any bug
         (done) 5. Remove closed bugs
         (done) 6. Display stats (# of closed bugs / # of bugs)
-        7. Improvise the bug display
-        8. Sort the bugs
+        (done) 7. Improvise the bug display
+        (done) 8. Sort the bugs
         9. Persist the bugs in the localStorage
         10. Display 'createdAt' for each bug
         11. Persist the bugs in the server
