Persisting the bugs in the localStorage

--- a/artefacts/bugTracker-template.html
+++ b/artefacts/bugTracker-template.html
@@ -14,7 +14,7 @@
         (done) 6. Display stats (# of closed bugs / # of bugs)
         (done) 7. Improvise the bug display
         (done) 8. Sort the bugs
-        9. Persist the bugs in the localStorage
+        (done) 9. Persist the bugs in the localStorage
             window.localStorage
             =====
                 * key/value store
