data file for server communication

--- a/artefacts/bugTracker-template.html
+++ b/artefacts/bugTracker-template.html
@@ -33,7 +33,7 @@
                     - clear()
                     - length
 
-        10. Display 'createdAt' for each bug
+        (done) 10. Display 'createdAt' for each bug
         11. Persist the bugs in the server
         12. Make the buys accessible using unique urls
     </script>
